--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matthew Wilson</title>
   </head>
+  <a href="projects.html">Projects</a>
+  <a href="contacts.html">Contact</a>
   <body>
     <h1>Matthew Wilson</h1>
     <p>
@@ -15,6 +17,6 @@
       currently a student at Base Camp Coding Academy.
     </p>
     <br />
-    <p>I currently know/use the following languages.</p>
+    <p>I currently know/use the following languages:</p>
   </body>
 </html>
