--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matthew Wilson</title>
   </head>
-  <a href="projects.html">Projects</a>
-  <a href="contacts.html">Contact</a>
+  <div class="nav-bar">
+    <p></p>
+    <ul>
+      <li class="nav-list"><a href="index.html"> {Autobiography} </a></li>
+      <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
+      <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
+    </ul>
+  </div>
+
   <body>
     <h1>Matthew Wilson</h1>
     <p>
@@ -18,5 +25,11 @@
     </p>
     <br />
     <p>I currently know/use the following languages:</p>
+    <ul>
+      <li>{C}</li>
+      <li>{C#}</li>
+      <li>{Python}</li>
+      <li>{HTML/CSS}</li>
+    </ul>
   </body>
 </html>
