--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   </div>
 
   <body>
-    <h1>Matthew Wilson</h1>
+    <div class="container">
+      <h1>Matthew Wilson</h1>
+      <img src="matt-wilson.png" />
+    </div>
+
     <p>
       My name is Matthew Wilson, an Indie Game Developer. My primary project is
       a game called “Stardust Kingdoms: Crying Moon”, found below, with a lot of
