--- a/contacts.html
+++ b/contacts.html
@@ -6,5 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Information</title>
   </head>
+  <div class="nav-bar">
+    <p></p>
+    <ul>
+      <li class="nav-list"><a href="index.html"> {Autobiography} </a></li>
+      <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
+      <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
+    </ul>
+  </div>
   <body></body>
 </html>
