--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matthew's Projects</title>
   </head>
+  <div class="nav-bar">
+    <p></p>
+    <ul>
+      <li class="nav-list"><a href="index.html"> {Autobiography} </a></li>
+      <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
+      <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
+    </ul>
+  </div>
   <body>
     <h1>My Projects</h1>
   </body>
