added content to contacts

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
   <body>
     <div class="container">
-      <h1>Matthew Wilson</h1>
+      <h1>{Matthew Wilson}</h1>
       <img src="matt-wilson.png" />
     </div>
 
     <p>
-      My name is Matthew Wilson, an Indie Game Developer. My primary project is
+      {My name is Matthew Wilson, an Indie Game Developer. My primary project is
       a game called “Stardust Kingdoms: Crying Moon”, found below, with a lot of
       inspiration from “The Elder Scrolls”, my favorite game series. I am
-      currently a student at Base Camp Coding Academy.
+      currently a student at Base Camp Coding Academy.}
     </p>
     <br />
-    <p>I currently know/use the following languages:</p>
+    <p>{I currently know/use the following languages:}</p>
     <ul>
       <li>{C}</li>
       <li>{C#}</li>
