--- a/contacts.html
+++ b/contacts.html
@@ -14,5 +14,26 @@
       <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
     </ul>
   </div>
-  <body></body>
+  <body>
+    <h1>{My Contact Information}</h1>
+    <div>
+      <ul>
+        .
+        <br />
+        <li class="nav-list">
+          <a target="_blank" href="https://github.com/MatthewWilsonBCAA"
+            >{Github}</a
+          >
+        </li>
+        <br />
+        <li class="nav-list">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/mathew-wilson-755242177/"
+            >{LinkedIn}</a
+          >
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
