added content to projects page

--- a/projects.html
+++ b/projects.html
@@ -16,5 +16,43 @@
   </div>
   <body>
     <h1>{My Projects}</h1>
+    <ul>
+      <li class="nav-list">
+        <a
+          target="_blank"
+          href="https://matthewwilsonbcaa.github.io/SK-Ad-Page/"
+          >{Stardust Kingdoms: Crying Moon}</a
+        >
+        <br />
+        <img src="skcm.PNG" />
+      </li>
+      <li class="nav-list">
+        <a
+          target="_blank"
+          href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-matthew-and-lathe"
+          >{Unit Project 1: Blackjack}</a
+        >
+        <br />
+        <img src="blackjack.PNG" />
+      </li>
+      <li>
+        <a
+          target="_blank"
+          href="https://github.com/BaseCampCoding/unit-project-2-matthew-and-andy"
+          >{Unit Project 2: Z-Shooter}</a
+        >
+        <br />
+        <img src="zshooter.PNG" />
+      </li>
+      <li>
+        <a
+          target="_blank"
+          href="https://github.com/MatthewWilsonBCAA/minecraft-clone"
+          >{Top Down Minecraft Clone}</a
+        >
+        <br />
+        <img src="mineclone.PNG" />
+      </li>
+    </ul>
   </body>
 </html>
