--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="zero.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matthew Wilson</title>
@@ -9,6 +10,7 @@
   <div class="nav-bar">
     <p></p>
     <ul>
+      <h1>{Matthew's Portfolio}</h1>
       <li class="nav-list"><a href="index.html"> {Autobiography} </a></li>
       <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
       <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
