added my terminal to my page

--- a/term.html
+++ b/term.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="zero.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matthew Wilson</title>
+    <title>Matthew's Terminal</title>
   </head>
   <div class="nav-bar">
     <p></p>
@@ -17,25 +17,10 @@
       <li class="nav-list"><a href="term.html"> {Terminal} </a></li>
     </ul>
   </div>
-
   <body>
-    <h1>{Matthew Wilson}</h1>
-    <img src="matt-wilson.png" />
-
-    <p>
-      {My name is Matthew Wilson, an Indie Game Developer. My primary project is
-      a game called “Stardust Kingdoms: Crying Moon”, found below, with a lot of
-      inspiration from “The Elder Scrolls”, my favorite game series. I am
-      currently a student at Base Camp Coding Academy.}
-    </p>
-    <br />
-    <p>{I currently know/use the following languages:}</p>
-    <ul>
-      <li>{C}</li>
-      <li>{C#}</li>
-      <li>{Python}</li>
-      <li>{HTML/CSS}</li>
-      <li>{JavaScript}</li>
-    </ul>
+    <p>Type '.help' to get started</p>
+    <input type="text" id="my-input" />
+    <p id="demo"></p>
+    <script src="input.js"></script>
   </body>
 </html>
