--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,7 @@
       <li class="nav-list"><a href="index.html"> {Autobiography} </a></li>
       <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
       <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
+      <li class="nav-list"><a href="term.html"> {Terminal} </a></li>
     </ul>
   </div>
   <body>
