finished the main layout of the terminal

--- a/term.html
+++ b/term.html
@@ -18,7 +18,7 @@
     </ul>
   </div>
   <body>
-    <p>Type '.help' to get started</p>
+    <p>Type '.help' to get started (I wrote this with JavaScript running it)</p>
     <input type="text" id="my-input" />
     <p id="demo"></p>
     <script src="input.js"></script>
