--- a/term.html
+++ b/term.html
@@ -11,7 +11,7 @@
     <p></p>
     <ul>
       <h1>{Matthew's Portfolio}</h1>
-      <li class="nav-list"><a href="index.html"> {Autobiography} </a></li>
+      <li class="nav-list"><a href="index.html"> {About Me} </a></li>
       <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
       <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
       <li class="nav-list"><a href="term.html"> {Terminal} </a></li>
