--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
   <div class="nav-bar">
     <p></p>
     <ul>
-      <h1>{Matthew's Portfolio}</h1>
-      <li class="nav-list"><a href="index.html"> {About Me} </a></li>
-      <li class="nav-list"><a href="projects.html"> {Projects} </a></li>
-      <li class="nav-list"><a href="contacts.html"> {Contact} </a></li>
-      <li class="nav-list"><a href="term.html"> {Terminal} </a></li>
+      <li class="nav-list"><a href="#aboutme"> {About Me} </a></li>
+      <li class="nav-list"><a href="#projects"> {Projects} </a></li>
+      <li class="nav-list"><a href="#terminal"> {Terminal} </a></li>
+      <li class="nav-list"><a href="#contacts"> {Contact} </a></li>
     </ul>
   </div>
 
   <body>
-    <h1>{Matthew Wilson}</h1>
+    <h1 id="aboutme">{Matthew Wilson}</h1>
     <img src="matt-wilson.png" />
 
     <p>
@@ -37,5 +36,70 @@
       <li>{HTML/CSS}</li>
       <li>{JavaScript}</li>
     </ul>
+
+    <h1 id="projects" class="secondary-header">{My Projects}</h1>
+    <ul>
+      <li class="nav-list">
+        <a
+          target="_blank"
+          href="https://matthewwilsonbcaa.github.io/SK-Ad-Page/"
+          >{Stardust Kingdoms: Crying Moon}</a
+        >
+        <br />
+        <img src="skcm.PNG" />
+      </li>
+      <li class="nav-list">
+        <a
+          target="_blank"
+          href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-matthew-and-lathe"
+          >{Unit Project 1: Blackjack}</a
+        >
+        <br />
+        <img src="blackjack.PNG" />
+      </li>
+      <li>
+        <a
+          target="_blank"
+          href="https://github.com/BaseCampCoding/unit-project-2-matthew-and-andy"
+          >{Unit Project 2: Z-Shooter}</a
+        >
+        <br />
+        <img src="zshooter.PNG" />
+      </li>
+      <li>
+        <a
+          target="_blank"
+          href="https://github.com/MatthewWilsonBCAA/minecraft-clone"
+          >{Top Down Minecraft Clone}</a
+        >
+        <br />
+        <img src="mineclone.PNG" />
+      </li>
+    </ul>
+
+    <h1 id="terminal" class="secondary-header">{Terminal}</h1>
+    <p>Type '.help' to get started (I wrote this is JavaScript)</p>
+    <input type="text" id="my-input" />
+    <p id="demo"></p>
+    <script src="input.js"></script>
+
+    <h1 id="contacts" class="secondary-header">{My Contact Information}</h1>
+    <div>
+      <ul>
+        <li class="nav-list">
+          <a target="_blank" href="https://github.com/MatthewWilsonBCAA"
+            >{Github}</a
+          >
+        </li>
+        <br />
+        <li class="nav-list">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/mathew-wilson-755242177/"
+            >{LinkedIn}</a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
