put all my content on one page

--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matthew Wilson</title>
   </head>
-  <div class="nav-bar">
-    <p></p>
-    <ul>
-      <li class="nav-list"><a href="#aboutme"> {About Me} </a></li>
-      <li class="nav-list"><a href="#projects"> {Projects} </a></li>
-      <li class="nav-list"><a href="#terminal"> {Terminal} </a></li>
-      <li class="nav-list"><a href="#contacts"> {Contact} </a></li>
-    </ul>
-  </div>
+  <ul class="nav-bar">
+    <li class="nav-list"><a href="#aboutme"> {About Me} </a></li>
+    <li class="nav-list"><a href="#projects"> {Projects} </a></li>
+    <li class="nav-list"><a href="#terminal"> {Terminal} </a></li>
+    <li class="nav-list"><a href="#contacts"> {Contact} </a></li>
+  </ul>
 
   <body>
     <h1 id="aboutme">{Matthew Wilson}</h1>
