--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <img src="matt-wilson.png" />
 
     <p>
-      {My name is Matthew Wilson, an Indie Game Developer. My primary project is
-      a game called “Stardust Kingdoms: Crying Moon”, found below, with a lot of
-      inspiration from “The Elder Scrolls”, my favorite game series. I am
-      currently a student at Base Camp Coding Academy.}
+      {My name is Matthew Wilson, an Indie Game Developer, and also a student at
+      Base Camp Coding Academy. My primary project is a game called “Stardust
+      Kingdoms: Crying Moon”, found below, with a lot of inspiration from “The
+      Elder Scrolls”, my favorite game series.}
     </p>
     <br />
     <p>{I currently know/use the following languages:}</p>
@@ -43,12 +43,12 @@
           >{Stardust Kingdoms: Crying Moon}</a
         >
         <br />
-        <img src="skcm.PNG" class="side-by-side" />
+        <img src="skcm.PNG" />
         <br />
-        This is my personal project. The project uses Unity 3D Game Engine, with
-        C# as the scripting language. Set in Medieval Europe, this fantasy game
-        revolves around the mystical Amulet of Light, a power treasure that
-        allows the holder to control the cycle of night and day.
+        {This is my personal project. The project uses Unity 3D Game Engine,
+        with C# as the scripting language. Set in Medieval Europe, this fantasy
+        game revolves around the mystical Amulet of Light, a power treasure that
+        allows the holder to control the cycle of night and day.}
       </li>
       <li class="nav-list">
         <a
@@ -59,9 +59,9 @@
         <br />
         <img src="blackjack.PNG" />
         <br />
-        This was my first major project at Base Camp. Me and Lathe Ward worked
+        {This was my first major project at Base Camp. Me and Lathe Ward worked
         on this together, wanting to make a fun but simple virtual card game.
-        The game uses Python to run.
+        The game uses Python to run.}
       </li>
       <li>
         <a
@@ -72,10 +72,10 @@
         <br />
         <img src="zshooter.PNG" />
         <br />
-        This was my second major project at Base Camp. Me and Andy Duarte worked
-        on this together. We aimed to make a top-down game with features
+        {This was my second major project at Base Camp. Me and Andy Duarte
+        worked on this together. We aimed to make a top-down game with features
         inspired by Call of Duty's iconic Zombies mode, and Left 4 Dead. The
-        game uses Python and Pygame. The sound effects were recorded by me.
+        game uses Python and Pygame. The sound effects were recorded by me.}
       </li>
       <li>
         <a
@@ -86,10 +86,10 @@
         <br />
         <img src="mineclone.PNG" />
         <br />
-        This is my major side project that I work on at Base Camp. Inspired by
+        {This is my major side project that I work on at Base Camp. Inspired by
         the legendary game Minecraft, this game features building, mining,
         muliple blocks, and the ability to save your current world. This game is
-        also made with Python and Pygame.
+        also made with Python and Pygame.}
       </li>
     </ul>
 
