--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       Elder Scrolls”, my favorite game series.}
     </p>
     <br />
-    <p>{I currently know/use the following languages:}</p>
+    <p>{I currently know the following languages/tools :}</p>
     <ul>
       <li>{C}</li>
       <li>{C#}</li>
       <li>{Python}</li>
+      <li>{Django}</li>
+      <li>{Unity 3D}</li>
       <li>{HTML/CSS}</li>
       <li>{JavaScript}</li>
     </ul>
@@ -86,10 +88,22 @@
         <br />
         <img src="mineclone.PNG" />
         <br />
-        {This is my major side project that I work on at Base Camp. Inspired by
+        {This is a major side project that I worked on at Base Camp. Inspired by
         the legendary game Minecraft, this game features building, mining,
         muliple blocks, and the ability to save your current world. This game is
         also made with Python and Pygame.}
+      </li>
+      <li>
+        <a
+          target="_blank"
+          href="https://github.com/MatthewWilsonBCAA/minecraft-clone"
+          >{Zen Script}</a
+        >
+        <!--<br />
+        <img src="mineclone.PNG" />
+        <br />-->
+        {Zen Script is an interpreter-based language written with Python. The 
+        language includes basic I/O, function calls, and basic data collections.}
       </li>
     </ul>
 
