--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     <img src="matt-wilson.png" />
 
     <p>
-      {My name is Matthew Wilson, an Indie Game Developer, and also a student at
-      Base Camp Coding Academy. My primary project is a game called “Stardust
-      Kingdoms: Crying Moon”, found below, with a lot of inspiration from “The
-      Elder Scrolls”, my favorite game series.}
+      {My name is Matthew Wilson. I am a Software Developer, and currently student at
+      Base Camp Coding Academy. I am an effective problem solver and debugger.}
     </p>
     <br />
-    <p>{I currently know the following languages/tools :}</p>
+    <p>{I currently know the following languages/tools:}</p>
     <ul>
       <li>{C}</li>
       <li>{C#}</li>
