revised my self bio

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
     <img src="matt-wilson.png" />
 
     <p>
-      {My name is Matthew Wilson. I am a Software Developer, and currently student at
-      Base Camp Coding Academy. I am an effective problem solver and debugger.}
+      {My name is Matthew Wilson. I am a Software Developer, and currently a student at
+        Base Camp Coding Academy. Game Development has been a long-time passion of mine.
+        This drive of creating games has led me to software development where I enjoy
+        solving problems with creative and innovative solutions. My short-term goal is to
+        employ as a full-time software developer where I hope to be part of a team that has
+        a similar drive and passion for development.}
     </p>
     <br />
     <p>{I currently know the following languages/tools:}</p>
