--- a/index.html
+++ b/index.html
@@ -8,114 +8,114 @@
     <title>Matthew Wilson</title>
   </head>
   <ul class="nav-bar">
-    <li class="nav-list"><a href="#aboutme"> {About Me} </a></li>
-    <li class="nav-list"><a href="#projects"> {Projects} </a></li>
-    <li class="nav-list"><a href="#contacts"> {Contact} </a></li>
-    <li class="nav-list"><a href="#terminal"> {Terminal} </a></li>
+    <li class="nav-list"><a href="#aboutme"> About Me </a></li>
+    <li class="nav-list"><a href="#projects"> Projects </a></li>
+    <li class="nav-list"><a href="#contacts"> Contact </a></li>
+    <li class="nav-list"><a href="#terminal"> Terminal </a></li>
   </ul>
 
   <body>
-    <h1 id="aboutme">{Matthew Wilson}</h1>
+    <h1 id="aboutme">Matthew Wilson</h1>
     <img src="matt-wilson.png" />
 
     <p>
-      {My name is Matthew Wilson. I am a Software Developer, and currently a student at
+      My name is Matthew Wilson. I am a Software Developer, and currently a student at
         Base Camp Coding Academy. Game Development has been a long-time passion of mine.
         This drive of creating games has led me to software development where I enjoy
         solving problems with creative and innovative solutions. My short-term goal is to
         employ as a full-time software developer where I hope to be part of a team that has
-        a similar drive and passion for development.}
+        a similar drive and passion for development.
     </p>
     <br />
-    <p>{I currently know the following languages/tools:}</p>
+    <p>I currently know the following languages/tools:</p>
     <ul>
-      <li>{C}</li>
-      <li>{C#}</li>
-      <li>{Python}</li>
-      <li>{Django}</li>
-      <li>{Unity 3D}</li>
-      <li>{HTML/CSS}</li>
-      <li>{JavaScript}</li>
+      <li>C</li>
+      <li>C#</li>
+      <li>Python</li>
+      <li>Django</li>
+      <li>Unity 3D</li>
+      <li>HTML/CSS</li>
+      <li>JavaScript</li>
     </ul>
 
-    <h1 id="projects" class="secondary-header">{My Projects}</h1>
+    <h1 id="projects" class="secondary-header">My Projects</h1>
     <ul>
       <li class="nav-list">
         <a
           target="_blank"
           href="https://matthewwilsonbcaa.github.io/SK-Ad-Page/"
-          >{Stardust Kingdoms: Crying Moon}</a
+          >Stardust Kingdoms: Crying Moon</a
         >
         <br />
         <img src="skcm.PNG" />
         <br />
-        {This is my personal project. The project uses Unity 3D Game Engine,
+        This is my personal project. The project uses Unity 3D Game Engine,
         with C# as the scripting language. Set in Medieval Europe, this fantasy
         game revolves around the mystical Amulet of Light, a power treasure that
-        allows the holder to control the cycle of night and day.}
+        allows the holder to control the cycle of night and day.
       </li>
       <li class="nav-list">
         <a
           target="_blank"
           href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-matthew-and-lathe"
-          >{Unit Project 1: Blackjack}</a
+          >Unit Project 1: Blackjack</a
         >
         <br />
         <img src="blackjack.PNG" />
         <br />
-        {This was my first major project at Base Camp. Me and Lathe Ward worked
+        This was my first major project at Base Camp. Me and Lathe Ward worked
         on this together, wanting to make a fun but simple virtual card game.
-        The game uses Python to run.}
+        The game uses Python to run.
       </li>
       <li>
         <a
           target="_blank"
           href="https://github.com/BaseCampCoding/unit-project-2-matthew-and-andy"
-          >{Unit Project 2: Z-Shooter}</a
+          >Unit Project 2: Z-Shooter</a
         >
         <br />
         <img src="zshooter.PNG" />
         <br />
-        {This was my second major project at Base Camp. Me and Andy Duarte
+        This was my second major project at Base Camp. Me and Andy Duarte
         worked on this together. We aimed to make a top-down game with features
         inspired by Call of Duty's iconic Zombies mode, and Left 4 Dead. The
-        game uses Python and Pygame. The sound effects were recorded by me.}
+        game uses Python and Pygame. The sound effects were recorded by me.
       </li>
       <li>
         <a
           target="_blank"
           href="https://github.com/MatthewWilsonBCAA/minecraft-clone"
-          >{Top Down Minecraft Clone}</a
+          >Top Down Minecraft Clone</a
         >
         <br />
         <img src="mineclone.PNG" />
         <br />
-        {This is a major side project that I worked on at Base Camp. Inspired by
+        This is a major side project that I worked on at Base Camp. Inspired by
         the legendary game Minecraft, this game features building, mining,
         muliple blocks, and the ability to save your current world. This game is
-        also made with Python and Pygame.}
+        also made with Python and Pygame.
       </li>
       <li>
         <a
           target="_blank"
           href="https://github.com/MatthewWilsonBCAA/zen_script"
-          >{Zen Script}</a
+          >Zen Script</a
         >
         <br>
         <!--<br />
         <img src="mineclone.PNG" />
         <br />-->
-        {Zen Script is an interpreter-based language written with Python. The 
-        language includes basic I/O, function calls, and basic data collections.}
+        Zen Script is an interpreter-based language written with Python. The 
+        language includes basic I/O, function calls, and basic data collections.
       </li>
     </ul>
 
-    <h1 id="contacts" class="secondary-header">{My Contact Information}</h1>
+    <h1 id="contacts" class="secondary-header">My Contact Information</h1>
     <div>
       <ul>
         <li class="nav-list">
           <a target="_blank" href="https://github.com/MatthewWilsonBCAA"
-            >{Github}</a
+            >Github</a
           >
         </li>
         <br />
@@ -123,12 +123,12 @@
           <a
             target="_blank"
             href="https://www.linkedin.com/in/mathew-wilson-755242177/"
-            >{LinkedIn}</a
+            >LinkedIn</a
           >
         </li>
       </ul>
     </div>
-    <h1 id="terminal" class="secondary-header">{Terminal}</h1>
+    <h1 id="terminal" class="secondary-header">Terminal</h1>
     <p>Type '.help' to get started (I wrote this is JavaScript)</p>
     <input type="text" id="my-input" />
     <p id="demo"></p>
