--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <ul class="nav-bar">
     <li class="nav-list"><a href="#aboutme"> About Me </a></li>
+    <br>
     <li class="nav-list"><a href="#projects"> Projects </a></li>
+    <br>
     <li class="nav-list"><a href="#contacts"> Contact </a></li>
+    <br>
     <li class="nav-list"><a href="#terminal"> Terminal </a></li>
   </ul>
 
@@ -29,13 +32,13 @@
     <br />
     <p>I currently know the following languages/tools:</p>
     <ul>
-      <li>C</li>
-      <li>C#</li>
-      <li>Python</li>
-      <li>Django</li>
-      <li>Unity 3D</li>
-      <li>HTML/CSS</li>
-      <li>JavaScript</li>
+      <li>{C}</li>
+      <li>{C#}</li>
+      <li>{Python}</li>
+      <li>{Django}</li>
+      <li>{Unity 3D}</li>
+      <li>{HTML/CSS}</li>
+      <li>{JavaScript}</li>
     </ul>
 
     <h1 id="projects" class="secondary-header">My Projects</h1>
