added quizgo to portfolio

--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
         Zen Script is an interpreter-based language written with Python. The 
         language includes basic I/O, function calls, and basic data collections.
       </li>
+      <li>
+        <a
+          target="_blank"
+          href="https://github.com/BaseCampCoding/django-unit-project-seth-and-matthew"
+          >Quizgo</a
+        >
+        <br>
+        <!--<br />
+        <img src="mineclone.PNG" />
+        <br />-->
+        Quizgo is an online trivia site hosted on Heroku, and made with Django. The site
+        features various question categories milestone badges for users to earn, leaderboards,
+        friending other users, and messaging.
+      </li>
     </ul>
 
     <h1 id="contacts" class="secondary-header">My Contact Information</h1>
