--- a/index.html
+++ b/index.html
@@ -101,19 +101,6 @@
       <li>
         <a
           target="_blank"
-          href="https://github.com/MatthewWilsonBCAA/zen_script"
-          >Zen Script</a
-        >
-        <br>
-        <!--<br />
-        <img src="mineclone.PNG" />
-        <br />-->
-        Zen Script is an interpreter-based language written with Python. The 
-        language includes basic I/O, function calls, and basic data collections.
-      </li>
-      <li>
-        <a
-          target="_blank"
           href="https://github.com/BaseCampCoding/django-unit-project-seth-and-matthew"
           >Quizgo</a
         >
@@ -124,6 +111,17 @@
         Quizgo is an online trivia site hosted on Heroku, and made with Django. The site
         features various question categories milestone badges for users to earn, leaderboards,
         friending other users, and messaging.
+      </li>
+      <li>
+        <a
+           target="_blank"
+           hrtef="https://bodoh.herokuapp.com/"
+           >Bodoh</a
+        >
+        <br>
+        Bodoh is a live chat service hosted on Heroku, and made with Django Channels and JavaScript.
+        Bodoh allows users to create rooms, invite fellow users, accept invites, and leave rooms.
+        The site also features multiple visual overhauls for users to choose from.
       </li>
     </ul>
 
