--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
   <body>
     <h1 id="aboutme">Matthew Wilson</h1>
     <img src="matt-wilson.png" />
-
-    <p>
-      My name is Matthew Wilson. I am a Software Developer, and currently a student at
+    <ul>
+      <li>
+        My name is Matthew Wilson. I am a Software Developer, and currently a student at
         Base Camp Coding Academy. Game Development has been a long-time passion of mine.
         This drive of creating games has led me to software development where I enjoy
         solving problems with creative and innovative solutions. My short-term goal is to
         employ as a full-time software developer where I hope to be part of a team that has
         a similar drive and passion for development.
-    </p>
+      </li>
+    </ul>
     <br />
     <p>I currently know the following languages/tools:</p>
     <ul>
       <li>{C}</li>
       <li>{C#}</li>
+      <li>{Java}</li>
       <li>{Python}</li>
       <li>{Django}</li>
       <li>{Unity 3D}</li>
@@ -144,7 +146,7 @@
       </ul>
     </div>
     <h1 id="terminal" class="secondary-header">Terminal</h1>
-    <p>Type '.help' to get started (I wrote this is JavaScript)</p>
+    <p>Type '.help' to get started</p>
     <input type="text" id="my-input" />
     <p id="demo"></p>
     <script src="input.js"></script>
