--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <body>
     <h1 id="aboutme">Matthew Wilson</h1>
-    <img src="matt-wilson.png" />
     <ul>
+      <li><img src="matt-wilson.png" /></li>
       <li>
         My name is Matthew Wilson. I am a Software Developer, and currently a student at
         Base Camp Coding Academy. Game Development has been a long-time passion of mine.
