the terminal should autoscroll for the user now

--- a/index.html
+++ b/index.html
@@ -150,5 +150,6 @@
     <input type="text" id="my-input" />
     <p id="demo"></p>
     <script src="input.js"></script>
+    <div id="bottom"></div>
   </body>
 </html>
