added image for Bodoh

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
            hrtef="https://bodoh.herokuapp.com/"
            >Bodoh</a
         >
-        <br>
+        <br />
+        <img src="bodoh.png" />
+        <br />
         Bodoh is a live chat service hosted on Heroku, and made with Django Channels and JavaScript.
         Bodoh allows users to create rooms, invite fellow users, accept invites, and leave rooms.
         The site also features multiple visual overhauls for users to choose from.
