added prompt for terminal and more info

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Base Camp Coding Academy. Game Development has been a long-time passion of mine.
         This drive of creating games has led me to software development where I enjoy
         solving problems with creative and innovative solutions. My short-term goal is to
-        employ as a full-time software developer where I hope to be part of a team that has
+        be employed as a full-time software developer where I hope to be part of a team that has
         a similar drive and passion for development.
       </li>
     </ul>
@@ -54,6 +54,7 @@
         <br />
         <img src="skcm.PNG" />
         <br />
+        <i>(Jan. 2018 thru May 2021)</i>
         This is my personal project. The project uses Unity 3D Game Engine,
         with C# as the scripting language. Set in Medieval Europe, this fantasy
         game revolves around the mystical Amulet of Light, a power treasure that
@@ -68,9 +69,10 @@
         <br />
         <img src="blackjack.PNG" />
         <br />
+        <i>(Oct. 2020)</i>
         This was my first major project at Base Camp. Me and Lathe Ward worked
         on this together, wanting to make a fun but simple virtual card game.
-        The game uses Python to run.
+        The game is written in Python.
       </li>
       <li>
         <a
@@ -81,6 +83,7 @@
         <br />
         <img src="zshooter.PNG" />
         <br />
+        <i>(Nov. 2020)</i>
         This was my second major project at Base Camp. Me and Andy Duarte
         worked on this together. We aimed to make a top-down game with features
         inspired by Call of Duty's iconic Zombies mode, and Left 4 Dead. The
@@ -95,6 +98,7 @@
         <br />
         <img src="mineclone.PNG" />
         <br />
+        <i>(Dec. 2020 thru Feb. 2021)</i>
         This is a major side project that I worked on at Base Camp. Inspired by
         the legendary game Minecraft, this game features building, mining,
         muliple blocks, and the ability to save your current world. This game is
@@ -110,6 +114,7 @@
         <!--<br />
         <img src="mineclone.PNG" />
         <br />-->
+        <i>(Mar. 2021)</i>
         Quizgo is an online trivia site hosted on Heroku, and made with Django. The site
         features various question categories milestone badges for users to earn, leaderboards,
         friending other users, and messaging.
@@ -145,9 +150,13 @@
             >LinkedIn</a
           >
         </li>
+        <li class="nav-list">
+          matthewlucaswilson999@gmail.com
+        </li>
       </ul>
     </div>
     <h1 id="terminal" class="secondary-header">Terminal</h1>
+    <p>Here is a little fun, interactive terminal I added to the site with JS</p>
     <p>Type '.help' to get started</p>
     <input type="text" id="my-input" />
     <p id="demo"></p>
