Added link to itch page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <li class="nav-list">
         <a
           target="_blank"
-          href="https://matthewwilsonbcaa.github.io/SK-Ad-Page/"
+          href="https://the-mattbat999.itch.io/skcm"
           >Stardust Kingdoms: Crying Moon</a
         >
         <br />
